--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,11 @@ h6, .h6 {
   color: #f5f5f5;
 }
 
+.btn-fourth {
+  background: #000000;
+  color: #ffffff;
+}
+
 .btn-transparent {
   background: transparent;
   color: #41228e;
